2011-08-02 Josef Cacek
  * contact field specified from command line (tracker#3304993)
  * Polish translation from Zbig Wittmann added

2011-07-01 Josef Cacek (1.1.10 test)
  * new command line tool added: SignatureCounter
  * fixed wrong spelling of RenderMode.DESCRIPTION_ONLY enum instance (thanks to Jiri Lisicky for reporting)

2011-04-28 Aleksandar Stojsavljevic
  * Verifier: Improved verification (added new validation codes for certificate status)
  * Verifier: SignatureVerification class now holds signing certificate and certificate path

2011-04-28 Aleksandar Stojsavljevic
  * Verifier: verification is now possible against content of pdf (file doesn't have to be on file system).

2011-04-12 Josef Cacek
  * Signer: if the render mode is GRAPHIC_AND_DESCRIPTION but no graphic is provided, then fall back to DESCRIPTION_ONLY - tracker#3279620

2011-04-06 Aleksandar Stojsavljevic
  * Verifier: Improved verification (added checking for OCSP url inside certificate, added validation of TS server's certificate against keystore)

2011-04-01 Aleksandar Stojsavljevic
  * Verifier: removed certificateValid flag from SignatureVerification class
  * Verifier: introduced more complex checking for certification validity with methods getValidationCodes(VerificationResult) and getValidationCode(SignatureVerification, boolean) 

2011-03-30 Josef Cacek
  * Verifier checks the certification levels (and following modifications)

2011-03-30 Josef Cacek (1.1.9 test)
  * Verifier doesn't use a given keystores directly, it creates in-memory keystore now
  * Verifier validates the TSA certificates too
  
2011-03-29 Josef Cacek
  * Support for SunPKCS11 security provider registration at during application startup (additional configuration in conf.properties)  
  * Added option which allows to disable Acrobat 6 layer mode (in visible signature settings) tracker#3250105  
  * Font size setting applied also for "Signature name and description" display mode as a maximal allowed size 