@@ -1,0 +1,12 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<oor:component-data xmlns:oor="http://openoffice.org/2001/registry" xmlns:xs="http://www.w3.org/2001/XMLSchema" oor:name="WriterWebWindowState" oor:package="org.openoffice.Office.UI">
+	<node oor:name="UIElements">
+		<node oor:name="States">
+			<node oor:name="private:resource/toolbar/addon_net.sf.jsignpdf.jsignpdf" oor:op="replace">
+				<prop oor:name="UIName" oor:type="xs:string">
+					<value>JSignPdf</value>
+				</prop>
+			</node>
+		</node>
+	</node>
+</oor:component-data>
