@@ -1,3 +1,6 @@
+2011-08-03 Josef Cacek
+  * fix OpenOffice.org/LibreOffice toolbar naming (problem reported by Zbig Wittmann)
+
 2011-08-02 Josef Cacek
   * contact field specified from command line (tracker#3304993)
   * Polish translation from Zbig Wittmann added
